[package]
name = "kafka-ping-stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oblivious_state_machine = { git = "https://github.com/vnermolaev/oblivious-state-machine.git" }
kafka = "0.9.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = [ "full", "tracing" ] }
uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "env-filter" ] }
tracing-opentelemetry = "0.17.2"
opentelemetry = { version = "0.17.0", features = [ "rt-tokio" ] }
opentelemetry-jaeger = { version = "0.16.0", features = [ "rt-tokio" ] }
opentelemetry-otlp = "0.10.0"
